[tool.poetry]
name = "epic-7-secret-shop-refresh-bot"
version = "0.1.0"
description = ""
authors = ["Omar2535 <omar2535@alumni.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mouseinfo = "^0.1.3"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
pure-python-adb = "^0.3.0.dev0"
pyautogui = "^0.9.54"
pygetwindow = "^0.0.9"
pymsgbox = "^1.0.9"
pyperclip = "^1.9.0"
pyrect = "^0.2.0"
pyscreeze = "^0.1.30"
pytesseract = "^0.3.10"
pytweening = "^1.2.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
